1431. Kids With the Greatest Number of Candies